# juicefs-csi-driver

./: BUILD.bazel  WORKSPACE
cmd/: BUILD.bazel
deploy/: k8s-dev.yaml
deploy/kubernetes/dev/: kustomization.yaml
pkg/driver/: BUILD.bazel
pkg/juicefs/: BUILD.bazel  juicefs.go
pkg/util/: BUILD.bazel
tests/sanity/: BUILD.bazel
