load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["juicefs.go"],
    importpath = "github.com/juicedata/juicefs-csi-driver/pkg/juicefs",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_kubernetes//pkg/util/mount:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
